Fix incorrect spacing on large screens on home page

--- a/src/style.css
+++ b/src/style.css
@@ -62,6 +62,7 @@ blockquote {
 
 ul.posts {
   padding-left: 20px;
+  flex-grow: 1;
 }
 
 ul.posts li {
